--- a/package.json
+++ b/package.json
@@ -11,31 +11,38 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.4.7",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.6",
+    "classlist-polyfill": "^1.2.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.8",
     "del": "^3.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "details-element-polyfill": "^2.4.0",
+    "element-closest": "^3.0.2",
+    "es6-promise": "^4.2.8",
+    "fetch-ie8": "^1.5.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-cache": "^1.0.2",
-    "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
     "gulp-notify": "^3.2.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
-    "gulp-svgo": "^2.1.1",
+    "gulp-svgo": "^2.1.0",
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
-    "regenerator-runtime": "^0.13.2",
-    "svgo": "^1.1.1"
+    "intersection-observer": "^0.7.0",
+    "nodelist-foreach-polyfill": "^1.2.0",
+    "postcss-nested": "^4.1.1",
+    "postcss-scss": "^2.0.0",
+    "promise": "^8.0.3",
+    "regenerator-runtime": "^0.13.3",
+    "svgxuse": "^1.2.6",
+    "tiny-slider": "^2.9.2"
   }
 }
